cilium/mutual-auth/resources/helloworld-v1-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "v1"
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: helloworld-v1
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.cilium.k8s.policy.serviceaccount: sleep-v1
    authentication:
      mode: required
